--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "docx": "^8.5.0",
     "file-saver": "^2.0.5",
     "fs": "^0.0.1-security",
+    "html-to-pdf-js": "^0.9.3",
     "i18next": "^23.11.0",
     "i18next-browser-languagedetector": "^7.2.1",
     "i18next-http-backend": "^2.5.0",
@@ -53,6 +54,7 @@
     "react-i18next": "^14.1.0",
     "react-notifications": "^1.7.4",
     "react-pdf": "^7.7.1",
+    "react-pdfmake": "^0.3.0",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.0",
     "react-router": "^6.22.0",
