--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
     "react-toastify": "^10.0.4",
     "redux": "^5.0.1",
     "styled-components": "^6.1.8",
+    "sweetalert2": "^11.10.8",
+    "sweetalert2-react-content": "^5.0.7",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
