--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clint",
-  "version": "0.1.0",
+  "version": "1.1.1",
   "private": true,
   "dependencies": {
     "@emotion/core": "^11.0.0",
@@ -32,6 +32,7 @@
     "aos": "^2.3.4",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
     "docx": "^8.5.0",
     "file-saver": "^2.0.5",
