--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "file-saver": "^2.0.5",
     "fs": "^0.0.1-security",
     "html-to-pdf-js": "^0.9.3",
+    "html2pdf.js": "^0.9.0",
     "i18next": "^23.11.0",
     "i18next-browser-languagedetector": "^7.2.1",
     "i18next-http-backend": "^2.5.0",
